Fix stretch third card

--- a/assets/css/third-card-style.css
+++ b/assets/css/third-card-style.css
@@ -14,10 +14,12 @@ body {
 }
 
 .container {
-  min-height: 100vh;
   width: 100%;
-  background-color: rgb(255, 255, 255, 0.2);
-  padding-top: 150px;
+  padding-top: 120px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -26,7 +28,8 @@ body {
   min-width: 6.25rem;
   overflow: hidden;
   border-radius: 0.75rem;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .top-container {
@@ -36,6 +39,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 2rem 1.5rem;
+  flex: 1;
 }
 
 .notification-container {
@@ -93,11 +97,13 @@ body {
 .bottom-container {
   background: #fff;
   padding: 1.5rem;
+  flex: 1;
 }
 
 .details-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 40px;
   font-family: sans-serif;
   color: rgb(101, 101, 101);
   margin: 2rem 0.75rem;
